--- a/MyGame/app/src/main/res/values/strings.xml
+++ b/MyGame/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="box1">box1</string>
     <string name="box2">box2</string>
     <string name="box3">box3</string>
+    <string name="textV">Find the box</string>
 
 </resources>
